[gd_scene load_steps=10 format=2]

[ext_resource path="res://Menu/menu_theme.tres" type="Theme" id=1]
[ext_resource path="res://Player/gfxNesMario/walk0.png" type="Texture" id=2]
[ext_resource path="res://Player/gfxNesMario/walk2.png" type="Texture" id=3]
[ext_resource path="res://Player/gfxNesMario/walk1.png" type="Texture" id=4]
[ext_resource path="res://Menu/LoadingIcon.gd" type="Script" id=5]
[ext_resource path="res://Player/gfxNesMario/walk0_big.png" type="Texture" id=6]
[ext_resource path="res://Player/gfxNesMario/walk1_big.png" type="Texture" id=7]
[ext_resource path="res://Player/gfxNesMario/walk2_big.png" type="Texture" id=8]



[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 3 ) ],
"loop": true,
"name": "walk1",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 8 ) ],
"loop": true,
"name": "walk2",
"speed": 5.0
} ]

[node name="LoadingIcon" type="HBoxContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -92.0
margin_bottom = -216.0
theme = ExtResource( 1 )
alignment = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpriteLabel" type="Label" parent="."]
margin_top = 13.0
margin_right = 24.0
margin_bottom = 26.0
rect_min_size = Vector2( 24, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarioSprite" type="AnimatedSprite" parent="SpriteLabel"]
position = Vector2( 0, -19 )
frames = SubResource( 1 )
animation = "walk1"
centered = false

[node name="TextLabel" type="Label" parent="."]
margin_left = 28.0
margin_top = 13.0
margin_right = 124.0
margin_bottom = 26.0
text = "LOADING "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dots" type="Label" parent="."]
margin_left = 128.0
margin_top = 13.0
margin_right = 164.0
margin_bottom = 26.0
rect_min_size = Vector2( 36, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skip" type="Timer" parent="."]
wait_time = 0.25
autostart = true
[connection signal="timeout" from="Skip" to="." method="_on_Skip_timeout"]
